config/firewall.rules
# Generated by iptables-save v1.6.2 on Mon Nov 26 16:30:48 2018
*filter
:INPUT DROP [4991:219888]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [192:21909]
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -s 127.0.0.0/8 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 22 -m state --state NEW -m recent --update --seconds 120 --hitcount 5 --name ssh --mask 255.255.255.255 --rsource -j REJECT --reject-with tcp-reset
-A INPUT -p tcp -m tcp --dport 22 -m state --state NEW -m recent --set --name ssh --mask 255.255.255.255 --rsource
-A INPUT -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -s 10.0.0.0/24 -p icmp -m icmp --icmp-type 8 -j ACCEPT
-A INPUT -p udp --dport 51820 -j ACCEPT

-A INPUT -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 2112 -j ACCEPT
COMMIT
# Completed on Mon Nov 26 16:30:48 2018
